[package]
name = "lmtracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
